# marketforge-api-ecom

./: .env  .env.example  .gitignore  Dockerfile  FRONTEND_INTEGRATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  multi-vendor-commerce-platform.md  pyproject.toml  test_all_endpoints.py
.commandcode/taste/: taste.md
alembic/: __init__.py  env.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
app/modules/: __init__.py
app/modules/analytics/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/cart/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/catalog/: __init__.py  models.py  router.py  schemas.py  search.py  service.py
app/modules/checkout/: __init__.py  router.py  schemas.py  service.py
app/modules/customers/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/fulfillment/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/identity/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
app/modules/inventory/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/orders/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/payments/: __init__.py  models.py  router.py  schemas.py  service.py  webhooks.py
app/modules/pricing/: __init__.py  (+5 more)
tests/: conftest.py
tests/integration/: test_auth.py  test_checkout.py  test_smoke.py
tests/unit/: test_inventory.py  test_pricing.py  test_promotions.py
(+27 files in other folders)
